# CS-TCP-UDP

./: CMakeLists.txt  Client_TCP_UDP.cpp  README.md  Server_TCP_UDP.cpp  crc16_xmodem_main.cpp  makefile
CRC/: CMakeLists.txt
CRC/SRC/: crc16_xmodem_main.cpp
Client/: CMakelists.txt
Client/SRC/: Client_TCP_UDP.cpp
Server/: CMakeLists.txt
