cmake_minimum_required(VERSION 3.0.0)
project(CRC16 VERSION 0.1.0)

include(CTest)
enable_testing()

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}CRC/INC)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}SERVER/INC)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}CLIENT/INC)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/OUTPUT/bin)

add_subdirectory(CRC)
add_subdirectory(SERVER)
add_subdirectory(CLIENT)


#add_executable(CRC16 ${CRC16_DIR_SRCS})

#set(CPACK_PROJECT_NAME ${PROJECT_NAME})
#set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
#include(CPack)
